--- a/trip_planner_front/src/page/common/common.css
+++ b/trip_planner_front/src/page/common/common.css
@@ -25,53 +25,61 @@
   --main_04: #000000;
 
   /* gray color */
-  --gray_01:#222222;
-  --gray_02:#555555;
-  --gray_03:#717171;
-  --gray_04:#8F8F8F;
-  --gray_05:#B7B7B7;
+  --gray_01: #222222;
+  --gray_02: #555555;
+  --gray_03: #717171;
+  --gray_04: #8F8F8F;
+  --gray_05: #B7B7B7;
 
   /* line color */
-  --line_01:#222222;
-  --line_02:#D6D6D6;
-  --line_03:#EAECED;
+  --line_01: #222222;
+  --line_02: #D6D6D6;
+  --line_03: #EAECED;
+
+  /* status color */
+  --success: #30E462;
+  --error: #FF2803;
+  --warning: #F9B71B;
+  --info: #1795F0;
 }
 
 /* layout */
 html{font-family: pt-r;}
-.hidden{position:absolute; left:-9999%; font-size:0; line-height:0; text-indent:-9999%; overflow:hidden;}
+.hidden{position: absolute; left: -9999%; font-size: 0; line-height: 0; text-indent: -9999%; overflow: hidden;}
 
 .wrap{display: flex; flex-direction: column; min-height: 100vh;}
 .container{padding: 0 40px;}
 .contents{flex: 1; width: 100%; max-width: 1280px; margin: 0 auto; padding: 60px 0;}
-h2{margin-bottom:48px; color:#000; font-family: pt-b; font-size:24px; font-weight:bold; text-align:center; line-height:1.5;}
-h3{margin-bottom:24px; color:#000; font-family: pt-b; font-size:20px; font-weight:bold; line-height:1.5;}
-h4{margin-bottom:20px; color:#000; font-family: pt-b; font-size:16px; font-weight:bold; line-height:1.5;}
-h5{margin-bottom:8px; color:#000; font-family: pt-b; font-size:14px; font-weight:bold; line-height:1.5;}
+h2{margin-bottom: 48px; color: #000; font-family: pt-b; font-size: 24px; font-weight: bold; text-align: center; line-height: 1.5;}
+h3{margin-bottom: 24px; color: #000; font-family: pt-b; font-size: 20px; font-weight: bold; line-height: 1.5;}
+h4{margin-bottom: 20px; color: #000; font-family: pt-b; font-size: 16px; font-weight: bold; line-height: 1.5;}
+h5{margin-bottom: 8px; color: #000; font-family: pt-b; font-size: 14px; font-weight: bold; line-height: 1.5;}
 
 /* form */
 .input_wrap>.input_title{margin-bottom: 12px;}
 .input_wrap+.input_wrap{margin-top: 24px;}
 .input_wrap>.input_item{display: flex; gap: 12px;}
 .input_title>label{display: block; font-size: 16px; line-height: 1.5;}
-.input{display: block; width:100%; padding: 8px 0; border-bottom: 1px solid #000; font-size: 16px; line-height: 1.5;}
+.input{display: block; width: 100%; padding: 8px 0; border-bottom: 1px solid #000; font-size: 16px; line-height: 1.5;}
 .input[disabled]{background-color: #eee;}
-.input_item+.msg{position:relative; margin-top:8px; color:#F9504D; font-size:14px; line-height:1.5;}
+.input_item+.msg{position: relative; margin-top: 8px; color: var(--info); font-size: 14px; line-height: 1.5;}
+.input_item+.msg.success{color: var(--success);}
+.input_item+.msg.error{color: var(--error);}
 
-button[disabled]{opacity:0.2;}
-.btn_primary{min-width:112px; padding:11px 20px; border:1px solid var(--main_01); border-radius:24px; background-color:var(--main_01); color:#fff; font-size:14px; line-height:1.5; text-align:center; transition:all 0.2s;}
+button[disabled]{opacity: 0.2;}
+.btn_primary{min-width: 112px; padding: 11px 20px; border: 1px solid var(--main_01); border-radius: 24px; background-color: var(--main_01); color: #fff; font-size: 14px; line-height: 1.5; text-align: center; transition: all 0.2s;}
 [class^=btn_]:hover{opacity: 0.9;}
-.btn_secondary{min-width:112px; padding:11px 20px; border:1px solid var(--main_02); border-radius:24px; background-color:var(--main_02); color:#fff; font-size:14px; line-height:1.5; text-align:center; transition:all 0.2s;}
-.btn_primary.outline{background-color:#fff; color:var(--main_01);}
-.btn_secondary.outline{background-color:#fff; color:var(--main_02);}
-[class^=btn_].md{padding:9px 20px; border-radius:4px;}
-[class^=btn_].sm{min-width:48px; padding:4px 12px; border-radius:4px; font-size:12px; font-weight:normal;}
-/* [class^=btn_].view_more{padding-left:36px; background:url(/images/icon_plus_gray.svg) no-repeats center left 24px / 12px;} */
-[class^=btn_].outline.view_more{color:var(--main_04);}
-.btn_area{display:flex; gap:8px; margin-top:40px; justify-content:center;}
-.btn_area [class^=btn_].lg{margin:0 2px;}
+.btn_secondary{min-width: 112px; padding: 11px 20px; border: 1px solid var(--main_02); border-radius: 24px; background-color: var(--main_02); color: #fff; font-size: 14px; line-height: 1.5; text-align: center; transition: all 0.2s;}
+.btn_primary.outline{background-color: #fff; color: var(--main_01);}
+.btn_secondary.outline{background-color: #fff; color: var(--main_02);}
+[class^=btn_].md{padding: 9px 20px; border-radius: 4px;}
+[class^=btn_].sm{min-width: 48px; padding: 4px 12px; border-radius: 4px; font-size: 12px; font-weight: normal;}
+/* [class^=btn_].view_more{padding-left: 36px; background: url(/images/icon_plus_gray.svg) no-repeats center left 24px / 12px;} */
+[class^=btn_].outline.view_more{color: var(--main_04);}
+.btn_area{display: flex; gap: 8px; margin-top: 40px; justify-content: center;}
+.btn_area [class^=btn_].lg{margin: 0 2px;}
 /* a태그가 링크일 때 */
 .btn_link,
 .btn_link:hover,
 .btn_link:active,
-.btn_link:visited{text-decoration:underline; text-underline-offset:4px;}
+.btn_link:visited{text-decoration: underline; text-underline-offset: 4px;}
