--- a/trip_planner_front/src/page/member/member.css
+++ b/trip_planner_front/src/page/member/member.css
@@ -1,1 +1,17 @@
 .login_input_area{width: 540px; margin: 0 auto; padding: 48px; border: 1px solid #000; border-radius: 24px;}
+
+.naver{
+    background-image: url(../../../public/image/btnG_축약형.png);
+    width: 90px;
+    height: 45px;
+    background-repeat: no-repeat;
+    object-fit: contain;
+}
+
+.kakao{
+    background-image: url(../../../public/image/kakao_login_medium.png);
+    width: 90px;
+    height: 45px;
+    background-repeat: no-repeat;
+    object-fit: contain;
+}
