--- a/trip_planner_front/src/page/common/common.css
+++ b/trip_planner_front/src/page/common/common.css
@@ -55,31 +55,25 @@ h3{margin-bottom: 24px; color: #000; font-family: pt-b; font-size: 20px; font-we
 h4{margin-bottom: 20px; color: #000; font-family: pt-b; font-size: 16px; font-weight: bold; line-height: 1.5;}
 h5{margin-bottom: 8px; color: #000; font-family: pt-b; font-size: 14px; font-weight: bold; line-height: 1.5;}
 
-/* form */
-.input_wrap>.input_title{margin-bottom: 12px;}
-.input_wrap+.input_wrap{margin-top: 24px;}
-.input_wrap>.input_item{display: flex; gap: 12px;}
-.input_title>label{display: block; font-size: 16px; line-height: 1.5;}
-.input{display: block; width: 100%; padding: 8px 0; border-bottom: 1px solid #000; font-size: 16px; line-height: 1.5;}
-.input[disabled]{background-color: #eee;}
-.input_item+.msg{position: relative; margin-top: 8px; color: var(--info); font-size: 14px; line-height: 1.5;}
-.input_item+.msg.success{color: var(--success);}
-.input_item+.msg.error{color: var(--error);}
+/* header */
+.header{position: sticky; top: 0; background-color: #fff;}
+.header>.header_inner{display: flex; justify-content: space-between; width: 100%; max-width: 1280px; margin: 0 auto;}
+.logo>a{display: block; width: 140px; height: 60px; font-size: 0; text-indent: -9999%; overflow: hidden; background: url(/public/images/logo.svg) no-repeat center / contain;}
+.header .header_navi{position: relative; display: flex; align-items: center;}
+.header .search_wrap{display: flex;}
+.header .search_wrap>input{width: 0; padding: 8px 0 7px;font-size: 14px; line-height: 20px; transition: all 0.3s cubic-bezier(0.33, 1, 0.68, 1);}
+.header .search_wrap.active>input{width: 270px;}
+.header .search_wrap>.btn_search{display: block; width: 36px; height: 36px; background: url(/public/images/icon_search.svg) no-repeat center / contain;}
+.header .menu_wrap>.menu_list{display: none; position: absolute; right: 0; top: 60px; padding: 12px 0; border: 1px solid #000; border-radius: 12px;}
+.header .menu_wrap>.menu_list.active{display: block;}
+.header .menu_wrap>.menu_list a{display: block; min-width: 167px; padding: 0 40px; font-size: 16px; line-height: 40px; text-align: center;}
+.header .menu_wrap>.menu_list a:hover{background-color: var(--main_03);}
+.header .menu_wrap>.btn_menu{display: block; width: 36px; height: 36px; background: url(/public/images/icon_menu.svg) no-repeat center / contain;}
 
-button[disabled]{opacity: 0.2;}
-.btn_primary{min-width: 112px; padding: 11px 20px; border: 1px solid var(--main_01); border-radius: 24px; background-color: var(--main_01); color: #fff; font-size: 14px; line-height: 1.5; text-align: center; transition: all 0.2s;}
-[class^=btn_]:hover{opacity: 0.9;}
-.btn_secondary{min-width: 112px; padding: 11px 20px; border: 1px solid var(--main_02); border-radius: 24px; background-color: var(--main_02); color: #fff; font-size: 14px; line-height: 1.5; text-align: center; transition: all 0.2s;}
-.btn_primary.outline{background-color: #fff; color: var(--main_01);}
-.btn_secondary.outline{background-color: #fff; color: var(--main_02);}
-[class^=btn_].md{padding: 9px 20px; border-radius: 4px;}
-[class^=btn_].sm{min-width: 48px; padding: 4px 12px; border-radius: 4px; font-size: 12px; font-weight: normal;}
-/* [class^=btn_].view_more{padding-left: 36px; background: url(/images/icon_plus_gray.svg) no-repeats center left 24px / 12px;} */
-[class^=btn_].outline.view_more{color: var(--main_04);}
-.btn_area{display: flex; gap: 8px; margin-top: 40px; justify-content: center;}
-.btn_area [class^=btn_].lg{margin: 0 2px;}
-/* a태그가 링크일 때 */
-.btn_link,
-.btn_link:hover,
-.btn_link:active,
-.btn_link:visited{text-decoration: underline; text-underline-offset: 4px;}
+/* footer */
+.footer{background-color: #000;}
+.footer>.footer_inner{width: 100%; max-width: 1280px; margin: 0 auto; padding: 60px 0;}
+.footer .logo{display: block; width: 140px; height: 20px; font-size: 0; text-indent: -9999%; overflow: hidden; background: url(/public/images/logo_white.svg) no-repeat center / contain;}
+.footer .menu_list>ul{display: flex; gap: 24px; margin-top: 20px;}
+.footer .menu_list>ul>li>a{display: block; color: #fff; font-size: 16px; line-height: 1.5;}
+.footer .footer_txt{margin-top: 40px; color: #fff; font-size: 14px; line-height: 1.5;}
