--- a/trip_planner_front/src/page/common/common.css
+++ b/trip_planner_front/src/page/common/common.css
@@ -48,8 +48,8 @@ html{font-family: pt-r;}
 .hidden{position: absolute; left: -9999%; font-size: 0; line-height: 0; text-indent: -9999%; overflow: hidden;}
 
 .wrap{display: flex; flex-direction: column; min-height: 100vh;}
-.container{padding: 0 40px;}
-.contents{flex: 1; width: 100%; max-width: 1280px; margin: 0 auto; padding: 60px 0;}
+.container{flex: 1; padding: 0 40px;}
+.contents{width: 100%; max-width: 1280px; margin: 0 auto; padding: 60px 0;}
 h2{margin-bottom: 48px; color: #000; font-family: pt-b; font-size: 24px; font-weight: bold; text-align: center; line-height: 1.5;}
 h3{margin-bottom: 24px; color: #000; font-family: pt-b; font-size: 20px; font-weight: bold; line-height: 1.5;}
 h4{margin-bottom: 20px; color: #000; font-family: pt-b; font-size: 16px; font-weight: bold; line-height: 1.5;}
