--- a/trip_planner_front/src/page/member/member.css
+++ b/trip_planner_front/src/page/member/member.css
@@ -1,4 +1,6 @@
 .login_input_area{width: 540px; margin: 0 auto; padding: 48px; border: 1px solid #000; border-radius: 24px;}
+.join_input_area{width: 540px; margin: 0 auto; padding: 48px; border: 1px solid #000; border-radius: 24px;}
+
 
 .naver{
     background-image: url(../../../public/image/btnG_축약형.png);
