--- a/trip_planner_front/src/page/common/common.css
+++ b/trip_planner_front/src/page/common/common.css
@@ -56,7 +56,7 @@ h4{margin-bottom: 20px; color: #000; font-family: pt-b; font-size: 16px; font-we
 h5{margin-bottom: 8px; color: #000; font-family: pt-b; font-size: 14px; font-weight: bold; line-height: 1.5;}
 
 /* header */
-.header{position: sticky; top: 0; background-color: #fff;}
+.header{position: sticky; top: 0; background-color: #fff; z-index: 1000;}
 .header>.header_inner{display: flex; justify-content: space-between; width: 100%; max-width: 1280px; margin: 0 auto;}
 .logo>a{display: block; width: 140px; height: 60px; font-size: 0; text-indent: -9999%; overflow: hidden; background: url(/public/images/logo.svg) no-repeat center / contain;}
 .header .header_navi{position: relative; display: flex; align-items: center;}
@@ -65,7 +65,7 @@ h5{margin-bottom: 8px; color: #000; font-family: pt-b; font-size: 14px; font-wei
 .header .search_wrap.active>input{width: 270px;}
 .header .search_wrap.focus>input{width: 270px;}
 .header .search_wrap>.btn_search{display: block; width: 36px; height: 36px; background: url(/public/images/icon_search.svg) no-repeat center / contain;}
-.header .menu_wrap>.menu_list{display: none; position: absolute; right: 0; top: 60px; padding: 12px 0; border: 1px solid #000; border-radius: 12px;}
+.header .menu_wrap>.menu_list{display: none; position: absolute; right: 0; top: 60px; padding: 12px 0; border: 1px solid #000; border-radius: 12px; background-color: #fff;}
 .header .menu_wrap>.menu_list.active{display: block;}
 .header .menu_wrap>.menu_list a{display: block; min-width: 167px; padding: 0 40px; font-size: 16px; line-height: 40px; text-align: center;}
 .header .menu_wrap>.menu_list a:hover{background-color: var(--main_03);}
