투어리스트 진행중3

--- a/trip_planner_front/src/page/tour/tour.css
+++ b/trip_planner_front/src/page/tour/tour.css
@@ -28,18 +28,18 @@
   height: 40px;
   font-size: 16px !important;
 }
-.tour-search-wrap > .search-wrap,
+.tour-search-wrap > .tour-search,
 .tour-search-wrap > .calendar-wrap {
   width: 50%;
 }
-.tour-search-wrap > .search-wrap {
+.tour-search-wrap > .tour-search {
   border-right: 1px solid #999;
   overflow: hidden;
 }
-.tour-search-wrap > .search-wrap > * {
+.tour-search-wrap > .tour-search > * {
   float: left;
 }
-.tour-search-wrap > .search-wrap > input {
+.tour-search-wrap > .tour-search > input {
   height: 32px;
   padding-left: 10px;
 }
@@ -98,44 +98,43 @@
 
 /* 추천 투어상품 */
 .tour-item-wrap {
-  display: grid;
-  grid-template-columns: repeat(
-    4,
-    1fr
-  ); /* 한 줄에 4개의 동일한 너비의 열 생성 */
-  grid-gap: 20px; /* 열 사이의 간격 설정 */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-.tour-item {
+.tour-item-wrap > .tour-item {
   box-sizing: border-box;
   padding: 20px;
   cursor: pointer;
   display: flex;
   flex-direction: column;
+  width: calc(25% - 40px);
+  margin-bottom: 20px;
 }
 
-.tour-item img {
+.tour-item-wrap > .tour-item img {
   width: 100%;
-  max-width: 265px;
   height: auto;
   border-radius: 10px;
   margin-bottom: 10px;
 }
 
-.tour-item-name {
+.tour-item-wrap > .tour-item > .tour-item-name {
   font-size: 1.2em;
   margin-top: auto; /* tour-item-name을 아래쪽으로 이동시킴 */
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  width: 100%;
 }
 
-.tour-item-info {
+.tour-item-wrap > .tour-item > .tour-item-info {
   font-size: 0.9em;
   margin-top: 5px;
 }
 
-.tour-item-price {
+.tour-item-wrap > .tour-item > .tour-item-price {
   font-size: 1.1em;
   font-weight: bold;
   color: #e9511c; /* 주황색 */
