비밀번호/닉네임 인증

--- a/trip_planner_front/src/page/member/member.css
+++ b/trip_planner_front/src/page/member/member.css
@@ -18,3 +18,9 @@
     background-repeat: no-repeat;
     object-fit: contain;
 }
+
+.check-msg{
+    padding-top: 10px;
+    color: red;
+    font-weight: bold;
+}
