--- a/trip_planner_front/src/page/common/common.css
+++ b/trip_planner_front/src/page/common/common.css
@@ -56,7 +56,7 @@ h4{margin-bottom: 20px; color: #000; font-family: pt-b; font-size: 16px; font-we
 h5{margin-bottom: 8px; color: #000; font-family: pt-b; font-size: 14px; font-weight: bold; line-height: 1.5;}
 
 /* header */
-.header{position: sticky; top: 0; background-color: #fff; z-index: 1000;}
+.header{position: sticky; top: 0; background-color: #fff; border-bottom: 1px solid var(--line_03); z-index: 1000;}
 .header>.header_inner{display: flex; justify-content: space-between; width: 100%; max-width: 1280px; margin: 0 auto;}
 .logo>a{display: block; width: 140px; height: 60px; font-size: 0; text-indent: -9999%; overflow: hidden; background: url(/public/images/logo.svg) no-repeat center / contain;}
 .header .header_navi{position: relative; display: flex; align-items: center;}
