--- a/trip_planner_front/src/page/promotion/promotion.css
+++ b/trip_planner_front/src/page/promotion/promotion.css
@@ -1,8 +1,8 @@
-.btn_search{
+.contents.promotion .btn_search{
     display: block; width: 36px; height: 36px; background: url(/public/images/icon_search.svg) no-repeat center / contain;
 }
 
-.input_wrap{
+.contents.promotion .input_wrap{
     margin: 20px auto;
     margin-bottom: 50px;
     width: 500px;
@@ -11,6 +11,6 @@
     padding-left: 20px;
 }
 
-.input{
+.contents.promotion .input{
     border-bottom: none;
 }
