--- a/trip_planner_front/src/page/INN/innReg.css
+++ b/trip_planner_front/src/page/INN/innReg.css
@@ -34,13 +34,38 @@
   color: #e9511c;
   font-family: pt-b;
   padding: 0px 5px;
-  font-size: 12px;
+  font-size: 10px;
 }
 .inn-reg-image-wrap {
-  margin: 20px 0px;
+  margin: 3cap 0px;
 }
 .inn-reg-image {
   border: 1px solid #eee;
   border-radius: 10px;
   padding: 20px;
+}
+
+.img-box {
+  display: inline-flex;
+  box-sizing: border-box;
+  padding: 10px;
+  width: 300px;
+  height: 200px;
+  border: 1px solid #eee;
+  border-radius: 15px;
+  margin: 5px;
+}
+.img-box > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.img-box > label {
+  color: #ccc;
+  line-height: 128px;
+  cursor: pointer;
+  font-size: 12px;
+}
+.inn-reg-image {
+  margin-top: 30px;
 }
