--- a/trip_planner_front/src/page/common/common.css
+++ b/trip_planner_front/src/page/common/common.css
@@ -72,7 +72,7 @@ h5{margin-bottom: 8px; color: #000; font-family: pt-b; font-size: 14px; font-wei
 .header .menu_wrap>.btn_menu{display: block; width: 36px; height: 36px; background: url(/public/images/icon_menu.svg) no-repeat center / contain;}
 
 /* footer */
-.footer{background-color: #000;}
+.footer{background-color: #000; z-index: 1001;}
 .footer>.footer_inner{width: 100%; max-width: 1280px; margin: 0 auto; padding: 60px 0;}
 .footer .logo{display: block; width: 140px; height: 20px; font-size: 0; text-indent: -9999%; overflow: hidden; background: url(/public/images/logo_white.svg) no-repeat center / contain;}
 .footer .menu_list>ul{display: flex; gap: 24px; margin-top: 20px;}
