--- a/trip_planner_front/src/component/tourPagination.css
+++ b/trip_planner_front/src/component/tourPagination.css
@@ -5,14 +5,14 @@
 기타 #89cff0 #f4f5ef #8f705b #035e7b
 */
 
-.paging-wrap {
+.tour-paging-wrap {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 }
-.paging-wrap > .page-item {
-  min-width: 20px;
+.tour-paging-wrap > .page-item {
+  min-width: 40px;
   height: 20px;
   text-align: center;
   line-height: 20px;
@@ -21,7 +21,7 @@
   border: 1px solid #005caa;
   color: #005caa;
 }
-.page-item.active-page {
+.tour-paging-wrap > .page-item.active-page {
   background-color: #005caa;
   color: #fff;
 }
