마이페이지 content_wrap 배경색 뺌

--- a/trip_planner_front/src/page/mypage/mypage.css
+++ b/trip_planner_front/src/page/mypage/mypage.css
@@ -4,4 +4,4 @@
 .contents.mypage .side_menu > li{padding: 8px 0;}
 .contents.mypage .side_menu > li > a{display: block; font-size: 16px; line-height: 1.5;}
 .contents.mypage .side_menu > li > a.active{font-family: pt-b;}
-.contents.mypage .content_wrap{flex-grow: 1; border-radius: 30px; background-color: var(--main_03);}
+.contents.mypage .content_wrap{flex-grow: 1; border-radius: 30px;}
